Animation fix for the text overlap on several screens

--- a/src/public/css/animation.css
+++ b/src/public/css/animation.css
@@ -13,7 +13,7 @@
   opacity:0;
   left:25px;
   width:100%;
-  position:absolute;
+  position:relative;
 }
 
 .ng-enter.ng-enter-active {
